# inf05016-matching

./: .gitmodules  CMakeLists.txt  README.md
include/: graph.hpp  test.hpp  test_case_generator.hpp
lab/: generate-tests.py  run-tests.py  setup.py
lab/analysis/: data.tgz
lab/results/: summary.csv
src/: graph.cpp  main.cpp  maxMatching.cpp  minPerfMatching.cpp  test_case_generator.cpp
